--- a/site-plan-rafting(ini).html
+++ b/site-plan-rafting(ini).html
@@ -9,9 +9,9 @@
 
 <body>
   <header>
-    <h1>Upcoming Activities Site Plan</h1>
-    <h2>Cos Ng</h2>
-    <h2>WDD 130-1</h2>
+    <h1>[Site name] Site Plan</h1>
+    <h2>[FirstName LastName]</h2>
+    <h2>WDD 130-[section]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -19,18 +19,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To Show Activities of the Ward</p>
+    <p>[Your purpose here]</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Members of the Ward</p>
+    <p>[Your audience here]</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/Ward_logo.jpg" alt="Logo image" />
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -41,11 +41,9 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a</a>
-      
+    <a href="https://coolors.co/99855F-594D37-DABD88-E6C78E-BFA677"
+      target="_blank">https://coolors.co/99855F-594D37-DABD88-E6C78E-BFA677</a>
 
-    <!-- alternate color combinations : https://coolors.co/ffbe0b-fb5607-ff006e-8338ec-3a86ff -->
     <table class="colors">
       <tr>
         <th>Primary</th>
@@ -55,8 +53,8 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#E7C24F]</td>
-        <td class="secondary">[#396E94]</td>
+        <td class="primary">[#396E94]</td>
+        <td class="secondary">[#E7C24F]</td>
         <td class="accent1">[#A43312]</td>
         <td class="accent2"></td>
       </tr>
@@ -68,11 +66,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Rock Salt
+      Heading Font: [Font Name here]
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Roboto
+      Paragraph Font: [Font Name here]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
