--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                 <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
             </div>
             <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Drafy Oar</h4>
+                <h1 class="home-title">Have An Adventure
+                </h1>
+                <h4>Make Memories with Drafy Oar
+                </h4>
                 <div>
                     <a class = 'book' href="contactus.html">Book Now</a>
                 </div>
