--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="rivers.html">Rivers</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
@@ -32,6 +32,7 @@
                 <div>
                     <a class = 'book' href="contactus.html">Book Now</a>
                 </div>
+                
             </section>
         </div>
         <main class = "home-grid">
