--- a/contactus.html
+++ b/contactus.html
@@ -100,11 +100,11 @@
             </section>
         </div>
         <main>
-            <div id=""feedback"></div>
+            <div id="feedback"></div>
             <form action="/my-handling-form-page" method="post" class="form">
                 <div class="form">
                     <label for="name">Enter your name: </label>
-                    <input type="text" name="name" id="customer_name" required>
+                    <input type="text" name="name" id="user_name" required>
                 </div>
                 <div class="form">
                     <label for="email">Enter your email: </label>
@@ -112,10 +112,10 @@
                 </div>
                 <div class = "form">
                     <label for= "msg">Message:</label>
-                    <textarea id="msg" name="customer_message"></textarea>
+                    <textarea id="msg" name="user_message"></textarea>
                 </div>
                 <div class="button1">
-                    <input type="submit" value="Submit!" id="submit">
+                    <button type="submit" >Send the message</button>
                 </div>
             </form>
         </main>
