--- a/rivers.html
+++ b/rivers.html
@@ -24,31 +24,31 @@
                 <img id="river-img" src="images/rafting_river.jpg" alt="People enjoying rafting">
             </div>
         </div>
-        <section>
-            <main class = "river-grid">
-                <section id = "rivers">
+        <main>
+            <div class = "river-grid">
+                <div id = "rivers">
                     <img id="rafting_img" src="images/littlecolorado.jpg" alt="Rafting in Salmon River, Idaho">
-                </section>
-                <section id = "description">
+                </div>
+                <div id = "description">
                     <h1>Main Fork of the Salmon River, Idaho</h1>
                     <div class="scroll-container">
                         <div class="scroll-object">
-                        <p>
+                        
                         <ul>
                             <li>
                                 Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The Salmon was given the nickname long ago as the River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the rugged beauty of the river that they never left.
                             </li>
-                            <li>Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed.
+                            <li>Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter fromç sun or rain when needed.
                             </li>
                             <li>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.
                             </li>
                         </ul>
-                        </p>
-                    </div>
-                    </div>
-                </section>
-            </main>
-        </section>
+                        
+                        </div>
+                    </div>  
+                </div>
+            </div>
+        </main>
         <footer>
             <p>Dry Oar &copy; 2023 - Cosmo Ng</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
